# Predator-Dev13

./: .dockerignore  .editorconfig  .env.example  .env.production.example  .gitignore  .pre-commit-config.yaml  .python-version  COPILOT_INSTRUCTIONS.md  DOCKER_README.md  FINAL_PRODUCTION_CHECKLIST.md  Makefile  PRIORITY_1_IMPLEMENTATION.md  PRODUCTION_DEPLOYMENT.md  PRODUCTION_READINESS_REPORT.md  PROJECT_SUMMARY.md  README.md  README_CI_SECRETS.md  README_QUICKSTART.md  deploy_priority_1.sh  docker-compose.yml  fix_helm_values.py  fix_helm_values.sh  junit.xml  package.json  pr_body.md  process_excel.py  pyproject.toml  requirements-dev.txt  upload_excel.py
.devcontainer/: compose.yml  devcontainer.json
.github/workflows/: ci-cd.yaml  ci-clean.yml  ci.yml  collect-docker-logs.yml  collect-docker-report.yml  pipeline.yml  (+8 more)
agents/: Dockerfile  anomaly_detection_agent.py  arbiter.py  auto_heal_agent.py  backup_agent.py  base_agent.py  chaos_agent.py  collaboration_agent.py  compliance_agent.py  compliance_monitor_agent.py  content_relevance_agent.py  corruption_detector_agent.py  cybersecurity_agent.py  data_quality_agent.py  deployment_agent.py  devops_agent.py  disaster_recovery_agent.py  documentation_agent.py  ethics_agent.py  forecast_agent.py  fraud_detection_agent.py  image_processing_agent.py  innovation_agent.py  integration_agent.py  knowledge_graph_agent.py  learning_agent.py  lobby_map_agent.py  logging_agent.py  lora_trainer_agent.py  market_intelligence_agent.py  miner.py  model_registry.yaml  monitoring_agent.py  multimodal_agent.py  natural_language_processing_agent.py  optimization_agent.py  personal_feed_agent.py  query_planner_agent.py  recommendation_agent.py  retriever.py  (+8 more)
api/: Dockerfile  alembic.ini  database.py  main.py  models.py  qdrant_manager.py  upload_service.py
app/: main.py
artifacts/home/runner/work/Predator-Dev13/Predator-Dev13/: pyproject.toml
devops/: dr_drill.sh
docs/: ci_cosign_example.md  ci_secrets.md  deploy.md  dev_setup.md  docker_troubleshooting.md  operational_procedures.md  rollout.md
etl/: cdc_workers.py  debezium_config.py  docker_compose_cdc.py  outbox_triggers.py
frontend/: Dockerfile  nginx.conf
infra/: appset-platform.yaml  argocd-app.yaml  argocd-apps.yaml  kubeconform.sh
model-router/: Dockerfile
parsers/: excel_parser.py  pdf_parser.py  telegram_parser.py  web_scraper.py
platform/: Chart.yaml  values-dev.yaml  values-prod.yaml  values-stage.yaml
scripts/: build_images.sh  build_local.sh  build_parallel.sh  check_docker.sh  cleanup.sh  collect_and_upload_logs.sh  collect_docker_logs.sh  deploy_priority1.sh  embeddings.py  encode_kubeconfig.sh  fix_helm_charts.sh  healthcheck.py  init_neo4j.sh  init_neo4j_constraints.cypher  init_neo4j_constraints.py  parse_index_excel.py  preflight_check.sh  production_setup.sh  reindex.py  seed_db.py  setup_neo4j_constraints.py  setup_neo4j_constraints.sh  setup_pyenv.sh  setup_python311.sh  test_containers.sh  update_helm_values.py
tests/: test_upload_endpoint.py
voice/: Dockerfile  audio_processing.py  voice_agent.py  voice_interface.py
(+152 files in other folders)
